# STM32F4-Project-Template

./: CMakeLists.txt  build.sh  toolchain-STM32F407.cmake
hw/: CMakeLists.txt
src/: CMakeLists.txt
startup/: stm32f4_linker.ld  stm32f4_startup.c
test/: CMakeLists.txt
